--- a/armhf/README
+++ b/armhf/README
@@ -1,5 +1,5 @@
 * To build binary image:
-  * install live-build qemu-user-static
+  * install live-build qemu-user-static make
   * run configure
   * run make
 
